# Autonomous_code_review_agent

./: README.md  main.py  pyproject.toml
graph/: state.py
integrations/: mcp_config.py
nodes/: complexity.py  critic.py  dependency.py  design.py  fetcher.py  llm_client.py  planner.py  security.py  self_evaluator.py  synthesizer.py
nodes/analyzers/: complexity.py  dependency.py  design.py  security.py
prompts/: complexity.yaml  critic.yaml  dependency.yaml  design.yaml  important_files.yaml  planner_decision.yaml  security.yaml  self_evaluator.yaml  synthesizer.yaml
